// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expense(s) totalling
     
    $1,141.95
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly without any expenses 1`] = `
<div>
  <p>
    no summary
  </p>
</div>
`;
